# backend/models/user_model.go
@@ -7,21 +7,22 @@ import (
 )
 
 type User struct {
-	Id          primitive.ObjectID `json:"_id,omitempty" bson:"_id,omitempty"`
-	Name        string             `json:"name" bson:"name" binding:"required"`
-	Email       string             `json:"email" bson:"email" binding:"required"`
-	Password    string             `json:"password" bson:"password" binding:"required"`
-	Jp_Id       string             `json:"jp_id" bson:"jp_id" binding:"required"`
-	Jp_Password string             `json:"jp_password" bson:"jp_password" binding:"required"`
-	// Tempory_Date time.Time          `json:"tempory_date,omitempty" bson:"tempory_date,omitempty"`
-	CreateAt  time.Time `json:"created_at,omitempty" bson:"created_at,omitempty"`
-	UpdatedAt time.Time `json:"updated_at,omitempty" bson:"updated_at,omitempty"`
+	Id                 primitive.ObjectID `json:"_id,omitempty" bson:"_id,omitempty"`
+	Name               string             `json:"name" bson:"name" binding:"required"`
+	Email              string             `json:"email" bson:"email" binding:"required"`
+	Prometric_ID       string             `json:"prometric_id" bson:"prometric_id" binding:"required"`
+	Prometric_Password string             `json:"prometric_password" bson:"prometric_password" binding:"required"`
+	Status             string             `json:"status" bson:"status" binding:"required"`
+	Tempoary_Data      string             `json:"tempoary_data,omitempty" bson:"tempoary_data,omitempty"`
+	CreateAt           time.Time          `json:"created_at,omitempty" bson:"created_at,omitempty"`
+	UpdatedAt          time.Time          `json:"updated_at,omitempty" bson:"updated_at,omitempty"`
 }
 
 type RequestUser struct {
-	Name        string `json:"name" bson:"name" binding:"required"`
-	Email       string `json:"email" bson:"email" binding:"required"`
-	Password    string `json:"password" bson:"password" binding:"required"`
-	Jp_Id       string `json:"jp_id" bson:"jp_id" binding:"required"`
-	Jp_Password string `json:"jp_password" bson:"jp_password" binding:"required"`
+	Name               string `json:"name" bson:"name" binding:"required"`
+	Email              string `json:"email" bson:"email" binding:"required"`
+	Prometric_ID       string `json:"prometric_id" bson:"prometric_id" binding:"required"`
+	Prometric_Password string `json:"prometric_password" bson:"prometric_password" binding:"required"`
+	Status             string `json:"status" bson:"status" binding:"required"`
+	Tempoary_Data      string `json:"tempoary_data,omitempty" bson:"tempoary_data,omitempty"`
 }
